--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
+    "mysql2": "^2.3.0",
+    "nodemon": "^2.0.14",
     "path": "^0.12.7",
-    "sequelize": "^6.6.4"
+    "sequelize": "^6.6.5"
   }
 }
